--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Calculator</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.5.1.js"></script>
+  <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 <body>
@@ -21,6 +21,47 @@
       </div>
       <button type="submit" class="btn">Add!</button>
     </form>
+    <div id="addresult"> </div>
+   
+    <form id="subtract">
+      <div class="form-group">
+       <label for="sub1">1st number:</label>
+       <input id="sub1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+       <label for="sub2">2nd number:</label>
+       <input id="sub2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Subtract!</button>
+    </form>
+    <div id="subtractresult"> </div>
+
+    <form id="multiply">
+      <div class="form-group">
+       <label for="multi1">1st number:</label>
+       <input id="multi1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="multi2">2nd number:</label>
+        <input id="multi2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Multiply!</button>
+    </form>
+    <div id="multiplyresult"> </div>
+  
+    <form id="divide">
+      <div class="form-group">
+       <label for="div1">1st number:</label>
+       <input id="div1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+       <label for="div2">2nd number:</label>
+       <input id="div2" class="form-control" type="text">
+      </div>
+    <button type="submit" class="btn">Divide!</button>
+    </form>
+    <div id="divideresult"> </div>
+ 
   </div>
 </body>
 </html>
